--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drink Water</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Drink Water</h1>
+    <h3>Goal: 2 Litres</h3>
+    <div class="cup">
+      <div class="remained" id="remained">
+        <span id="litres">1.25L</span>
+        <small>Remained</small>
+      </div>
+      <div class="percentage" id="percentage">20%</div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
