--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
       </div>
       <div class="percentage" id="percentage">20%</div>
     </div>
+    <p class="text">Select how many glasses of water that you have drank</p>
+    <div class="cups">
+      <div class="cup cup-sm full">250ml</div>
+      <div class="cup cup-sm full">250ml</div>
+      <div class="cup cup-sm">250ml</div>
+      <div class="cup cup-sm">250ml</div>
+      <div class="cup cup-sm">250ml</div>
+      <div class="cup cup-sm">250ml</div>
+      <div class="cup cup-sm">250ml</div>
+      <div class="cup cup-sm">250ml</div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
