--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <h3>Goal: 2 Litres</h3>
     <div class="cup">
       <div class="remained" id="remained">
-        <span id="litres">1.25L</span>
+        <span id="litres"></span>
         <small>Remained</small>
       </div>
-      <div class="percentage" id="percentage">20%</div>
+      <div class="percentage" id="percentage"></div>
     </div>
     <p class="text">Select how many glasses of water that you have drank</p>
     <div class="cups">
-      <div class="cup cup-sm full">250ml</div>
-      <div class="cup cup-sm full">250ml</div>
+      <div class="cup cup-sm">250ml</div>
+      <div class="cup cup-sm">250ml</div>
       <div class="cup cup-sm">250ml</div>
       <div class="cup cup-sm">250ml</div>
       <div class="cup cup-sm">250ml</div>
